--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "core-js": "^3.6.4",
     "json-server": "^0.16.1",
     "lodash": "^4.17.15",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-spinkit": "^1.7.10",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
