--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "json-server": "^0.16.1",
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
+    "sweetalert2": "^9.10.12",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-spinkit": "^1.7.10",
