--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "^0.2.0",
     "sweetalert2": "^9.10.12",
     "vue": "^2.6.11",
+    "vue-content-loader": "^0.2.3",
     "vue-router": "^3.1.6",
     "vue-spinkit": "^1.7.10",
     "vuex": "^3.1.3"
