--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@smartweb/vue-flash-message": "^0.6.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
@@ -25,6 +26,8 @@
     "vue-content-loader": "^0.2.3",
     "vue-router": "^3.1.6",
     "vue-spinkit": "^1.7.10",
+    "vue-toast-notification": "^0.3.0",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
