--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-spinkit": "^1.7.10",
     "vue-toast-notification": "^0.3.0",
     "vue-toasted": "^1.1.28",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
