--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@smartweb/vue-flash-message": "^0.6.4",
     "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
     "core-js": "^3.6.4",
     "json-server": "^0.16.1",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "nprogress": "^0.2.0",
     "sweetalert2": "^9.10.12",
     "vue": "^2.6.11",
