--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.4",
     "json-server": "^0.16.1",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
